issues on mobile devices fixed

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -221,16 +221,15 @@ h2 {
   background: url(../img/home-img.jpeg);
 }
 
-.home-section::after {
+/* .home-section::after {
   content: "";
   display: block;
   position: absolute;
   height: 2rem;
   width: 100vw;
   top: 97%;
-  /* margin-top: 35.5rem; */
   background: url( ../img/s-home-border.png );
-}
+} */
 
 .s-about {
   grid-column: 2 / 6;
@@ -432,20 +431,6 @@ h2 {
   background-size: contain !important;
 }
 
-.main-menu__item--pseudoelement::after {
-  content: "";
-  display: block;
-  position: absolute;
-  margin-left: .7rem;
-  height: .4rem;
-  width: 8rem;
-  background-image: url(../img/border-sec.png);
-  background-repeat: no-repeat;
-  background-position: 2180% bottom;
-  opacity: 0;
-  transition: all 400ms ease;
-}
-
 .main-menu__item--pseudoelement:hover::after {
   background-position: 33% bottom;
   opacity: 1;
@@ -510,6 +495,79 @@ h2 {
   display: grid !important;
 }
 
+@media (min-width: 1200px) {
+
+    .main-menu__item--pseudoelement::after {
+      content: "";
+      display: block;
+      position: absolute;
+      margin-left: .7rem;
+      height: .4rem;
+      width: 8rem;
+      background-image: url(../img/border-sec.png);
+      background-repeat: no-repeat;
+      background-position: 2180% bottom;
+      opacity: 0;
+      transition: all 400ms ease;
+    }
+
+    .bg-symbol-fire::after {
+      content: "";
+      width: 100vw;
+      height: 100vh;
+      background-repeat: no-repeat !important;
+      background-size: cover;
+      position: absolute;
+      left: 37.5%;
+      z-index: var(--z-index-layer1);
+      background: url( ../img/symbol-fire.svg );
+    }
+
+    .bg-symbol-water::after {
+      content: "";
+      width: 100vw;
+      height: 100vh;
+      background-repeat: no-repeat !important;
+      background-size: cover;
+      position: absolute;
+      top: 1rem;
+      left: 47%;
+      z-index: var(--z-index-layer1);
+      background: url( ../img/symbol-water.svg );
+      opacity: .27;
+    }
+
+    .bg-symbol-air::after {
+      content: "";
+      width: 100vw;
+      height: 100vh;
+      background-repeat: no-repeat !important;
+      background-size: cover;
+      position: absolute;
+      top: 3rem;
+      left: 32%;
+      z-index: var(--z-index-layer1);
+      background: url( ../img/symbol-air.svg );
+      opacity: .12;
+    }
+
+    .symbol-earth::after {
+      content: "";
+      width: 100vw;
+      height: 100vh;
+      background-repeat: no-repeat !important;
+      background-size: cover;
+      position: absolute;
+      top: .8rem;
+      left: 47%;
+      z-index: var(--z-index-layer1);
+      background: url( ../img/symbol-earth.svg );
+      opacity: .27;
+    }
+
+}
+
+
 @media (max-width: 1200px) {
 
   .project-item:nth-child(2) {
@@ -528,10 +586,10 @@ h2 {
     grid-column: 9 / 11;
   }
 
-  .main-menu__item--pseudoelement::after {
+  /* .main-menu__item--pseudoelement::after {
     margin-left: 35%;
     width: 25rem;
-  }
+  } */
 
   .subscribe-input {
     border-radius: 11px;
@@ -602,9 +660,9 @@ h2 {
     margin-top: 8.5rem;
   }
 
-  .main-menu__item--pseudoelement::after {
+  /* .main-menu__item--pseudoelement::after {
     margin-left: 28.67%;
-  }
+  } */
 
 
   .subscribe-input {
@@ -669,9 +727,9 @@ h2 {
     transform: translateY(3.3rem);
   }
 
-  .main-menu__item--pseudoelement::after {
+  /* .main-menu__item--pseudoelement::after {
     margin-left: 21%;
-  }
+  } */
 
   .s-footer__projects {
     grid-column: 3 / 11;
@@ -696,59 +754,7 @@ h2 {
 
 /* Cosmetics styles */
 
-.bg-symbol-fire::after {
-  content: "";
-  width: 100vw;
-  height: 100vh;
-  background-repeat: no-repeat !important;
-  background-size: cover;
-  position: absolute;
-  left: 37.5%;
-  z-index: var(--z-index-layer1);
-  background: url( ../img/symbol-fire.svg );
-}
 
-.bg-symbol-water::after {
-  content: "";
-  width: 100vw;
-  height: 100vh;
-  background-repeat: no-repeat !important;
-  background-size: cover;
-  position: absolute;
-  top: 1rem;
-  left: 47%;
-  z-index: var(--z-index-layer1);
-  background: url( ../img/symbol-water.svg );
-  opacity: .27;
-}
-
-.bg-symbol-air::after {
-  content: "";
-  width: 100vw;
-  height: 100vh;
-  background-repeat: no-repeat !important;
-  background-size: cover;
-  position: absolute;
-  top: 3rem;
-  left: 32%;
-  z-index: var(--z-index-layer1);
-  background: url( ../img/symbol-air.svg );
-  opacity: .12;
-}
-
-.symbol-earth::after {
-  content: "";
-  width: 100vw;
-  height: 100vh;
-  background-repeat: no-repeat !important;
-  background-size: cover;
-  position: absolute;
-  top: .8rem;
-  left: 47%;
-  z-index: var(--z-index-layer1);
-  background: url( ../img/symbol-earth.svg );
-  opacity: .27;
-}
 
 .subheading::after {
   content: "";
@@ -781,9 +787,9 @@ h2 {
     grid-column: 9 / 12;
   }
 
-  .main-menu__item--pseudoelement::after {
+  /* .main-menu__item--pseudoelement::after {
     margin-left: 14.55%;
-  }
+  } */
 
   .subscribe-input {
     width: 22.5rem;
@@ -793,7 +799,15 @@ h2 {
 
 @media (max-width: 480px) {
   .subscribe-input {
-    width: 21rem;
+    width: 16rem;
+  }
+
+  .contact-input {
+    width: 8rem;
+  }
+
+  .contact-textarea {
+    width: 16.25rem !important;
   }
 
 }
